start work on computation of CommGridRepn from gridcomplex

--- a/src/lib/Makefile.am
+++ b/src/lib/Makefile.am
@@ -7,5 +7,5 @@ libgridcomplex_la_SOURCES = gridcomplex.cpp
 libslicedhomology_la_SOURCES = slicedhomology.cpp
 
 libpmgap_la_SOURCES =
-libpmgap_la_LIBADD = libgridbirthtype.la libgridcomplex.la
+libpmgap_la_LIBADD = libgridbirthtype.la libgridcomplex.la libslicedhomology.la
 libpmgap_la_LDFLAGS =
