start files for writing tests in cpp pmgap

--- a/src/lib/Makefile.am
+++ b/src/lib/Makefile.am
@@ -9,3 +9,15 @@ libslicedhomology_la_SOURCES = slicedhomology.cpp
 libpmgap_la_SOURCES =
 libpmgap_la_LIBADD = libgridbirthtype.la libgridcomplex.la libslicedhomology.la
 libpmgap_la_LDFLAGS =
+
+# for Tests
+
+check_PROGRAMS = test_all
+
+test_all_SOURCES = test_all.cpp \
+test_slicedhomology.cpp
+
+test_all_CPPFLAGS =
+test_all_LDADD = libpmgap.la
+
+TESTS = $(check_PROGRAMS)
