add cmplx2repn command line utility

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,8 +1,11 @@
 SUBDIRS = lib
 
-bin_PROGRAMS = helloworld
+bin_PROGRAMS = helloworld cmplx2repn
 
 # LDADD = ./lib/libpmgap.la
 
 helloworld_SOURCES = helloworld.cpp
 helloworld_LDADD = ./lib/libpmgap.la -lgyoza
+
+cmplx2repn_SOURCES = cmplx2repn.cpp
+cmplx2repn_LDADD = ./lib/libpmgap.la -lgyoza
