incorporate code from gyoza to remove dependency

--- a/configure.ac
+++ b/configure.ac
@@ -18,8 +18,9 @@ AC_HEADER_STDC
 AC_HEADER_SYS_WAIT
 
 
+# AC_CHECK_HEADERS([gyoza/gyoza.h], [], [AC_MSG_ERROR([gyoza not found])])
+
 AC_CHECK_HEADERS([Eigen/Core], [], [AC_MSG_ERROR([eigen not found])])
-AC_CHECK_HEADERS([gyoza/gyoza.h], [], [AC_MSG_ERROR([gyoza not found])])
 AC_CHECK_HEADERS([nlohmann/json.hpp], [], [AC_MSG_ERROR([nlohmann/json.hpp not found])])
 AC_CHECK_HEADERS([tclap/CmdLine.h], [], [AC_MSG_ERROR([tclap not found])])
 
