add in some tests from gyoza

--- a/src/lib/Makefile.am
+++ b/src/lib/Makefile.am
@@ -23,7 +23,10 @@ test_all_SOURCES = test_all.cpp \
 test_slicedhomology.cpp \
 test_gridcomplex.cpp \
 test_gridbirthtype.cpp \
-test_gridslice.cpp
+test_gridslice.cpp \
+test_z2.cpp \
+test_z2matrix.cpp \
+test_setchain.cpp
 
 test_all_CPPFLAGS =
 test_all_LDADD = libpmgap.la
