remove test program helloworld

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,11 +1,8 @@
 SUBDIRS = lib
 
-bin_PROGRAMS = helloworld cmplx2repn
+bin_PROGRAMS = cmplx2repn
 
 # LDADD = ./lib/libpmgap.la
-
-helloworld_SOURCES = helloworld.cpp
-helloworld_LDADD = ./lib/libpmgap.la
 
 cmplx2repn_SOURCES = cmplx2repn.cpp
 cmplx2repn_LDADD = ./lib/libpmgap.la
