move cmplx2repn to pmgap_cmplx2repn

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,11 +1,11 @@
 SUBDIRS = lib
 
-bin_PROGRAMS = cmplx2repn
+bin_PROGRAMS = pmgap_cmplx2repn
 
 # LDADD = ./lib/libpmgap.la
 
-cmplx2repn_SOURCES = cmplx2repn.cpp
-cmplx2repn_LDADD = ./lib/libpmgap.la
+pmgap_cmplx2repn_SOURCES = pmgap_cmplx2repn.cpp
+pmgap_cmplx2repn_LDADD = ./lib/libpmgap.la
 
 
 gapscriptsdir = @gapscriptsdir@
