add batch reading of repns, batch interval-decompo analysis

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -11,12 +11,21 @@ pmgap_cmplx2repn_LDADD = ./lib/libpmgap.la
 gapscriptsdir = @gapscriptsdir@
 gapscripts_DATA = loader.g
 
-EXTRA_DIST = loader.g pmgap_interval_decomposable.in pmgap_from_homcloud_random_cech.py
+EXTRA_DIST = loader.g pmgap_interval_decomposable.in pmgap_batch_interval_decomposable.in pmgap_from_homcloud_random_cech.py
 
-bin_SCRIPTS = pmgap_interval_decomposable.sh pmgap_from_homcloud_random_cech.py
-CLEANFILES = pmgap_interval_decomposable.sh
+bin_SCRIPTS = pmgap_interval_decomposable.sh pmgap_batch_interval_decomposable.sh pmgap_from_homcloud_random_cech.py
+CLEANFILES = pmgap_interval_decomposable.sh pmgap_batch_interval_decomposable.sh
 
 pmgap_interval_decomposable.sh:	pmgap_interval_decomposable.in
+	$(SED) \
+		-e 's|[@]gapscriptsdir@|$(gapscriptsdir)|g' \
+		-e 's|[@]prefix@|$(prefix)|g' \
+		-e 's|[@]exec_prefix@|$(exec_prefix)|g' \
+		-e 's|[@]bindir@|$(bindir)|g' \
+		-e 's|[@]datarootdir@|$(datarootdir)|g' \
+		< "$<" > "$@"
+
+pmgap_batch_interval_decomposable.sh:	pmgap_batch_interval_decomposable.in
 	$(SED) \
 		-e 's|[@]gapscriptsdir@|$(gapscriptsdir)|g' \
 		-e 's|[@]prefix@|$(prefix)|g' \
