improve code for generate intervals

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,13 +8,13 @@ pmgap_cmplx2repn_SOURCES = pmgap_cmplx2repn.cpp
 pmgap_cmplx2repn_LDADD = ./lib/libpmgap.la
 
 gapscriptsdir = @gapscriptsdir@
-gapscripts_DATA = loader.g
+gapscripts_DATA = loader.g generate_intervals.g
 
 PYSCRPT = pmgap_from_homcloud_random_cech.py
 GPSCRPTIN = pmgap_interval_decomposable.in pmgap_batch_interval_decomposable.in pmgap_generate_intervals.in
 GPSCRPTOUT = $(GPSCRPTIN:.in=.sh)
 
-EXTRA_DIST = loader.g $(PYSCRPT) $(GPSCRPTIN)
+EXTRA_DIST = $(gapscripts_DATA) $(PYSCRPT) $(GPSCRPTIN)
 bin_SCRIPTS = $(PYSCRPT) $(GPSCRPTOUT)
 CLEANFILES = $(GPSCRPTOUT)
 
