implement interval approx

--- a/src/pmgap_interval_approximation.in
+++ b/src/pmgap_interval_approximation.in
@@ -53,6 +53,8 @@ __CODE="
 V:=JsonFileToCommGridRepn("'"'"$1"'"'");;
 Display(DimensionVector(V));
 Display("'"'"Compressed Multiplicity:"'"'");
-CompressedMultiplicity(V);"
+CompressedMultiplicity(V);
+Display("'"'"IntervalApproximation:"'"'");
+IntervalApproximation(V);"
 
 echo "$__CODE"  | gap -o 8G -q  @gapscriptsdir@/loader.g
